# cxrs-validation

./: .gitignore  README.md  pyproject.toml
src/: data.py  frame_sampler.py  main.py
