[project]
name = "cxrs-validation-ui"
version = "0.1.0"
description = "CXRS Validation UI"
readme = "README.md"
requires-python = ">=3.9, <3.13"
authors = [
]
maintainers = [
    {name = "Samuel Jackson", email = "samuel.jackson@ukaea.uk"},
]

classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
]
dependencies = [
    "numpy<2",
    "hvplot>=0.11.3",
    "loguru>=0.7.3",
    "netcdf4>=1.7.2",
    "panel>=1.4.5",
    "uda>=2.8.1",
    "xarray[io]>=2024.7.0",
    "matplotlib>=3.9.4",
]

[project.urls]
# repository = ""

[tool.ruff]
exclude = []

[tool.uv]
dev-dependencies = [
]
